# frep

./: Cargo.toml  README.md  flake.nix
.github/workflows/: publish-core.yml  release.yml
frep/: Cargo.toml
frep-core/: Cargo.toml  README.md
frep-core/src/: lib.rs  line_reader.rs  replace.rs  run.rs  search.rs  utils.rs  validation.rs
frep-core/tests/: run.rs  utils.rs
frep/src/: logging.rs  main.rs
tests/: README.md  compare-tools.nu
