[package]
name = "frep-core"
version = "0.1.0"
edition = "2024"
authors = ["thomasschafer97@gmail.com"]
description = "Core functionality for find and replace operations"
readme = "../README.md"
license = "MIT"
homepage = "https://github.com/thomasschafer/frep/tree/main/frep-core"
repository = "https://github.com/thomasschafer/frep/tree/main/frep-core"
keywords = ["cli", "find", "search", "replace"]
categories = ["command-line-utilities"]

[dependencies]

[lints]
workspace = true
