[package]
name = "frep-core"
version = "0.1.7"
edition = "2024"
authors = ["thomasschafer97@gmail.com"]
description = "Core functionality for find and replace operations"
readme = "README.md"
license = "MIT"
homepage = "https://github.com/thomasschafer/frep/tree/main/frep-core"
repository = "https://github.com/thomasschafer/frep/tree/main/frep-core"
keywords = ["cli", "find", "search", "replace"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.100"
content_inspector = "0.2.4"
crossterm = "0.29.0"
fancy-regex = "0.15.0"
ignore = "0.4.23"
log = "0.4.28"
regex = "1.12.2"
simple-log = "2.4.0"
tempfile = "3.23.0"

[dev-dependencies]
indoc = "2.0.5"
serial_test = "3.2.0"
tokio = { version = "1.48.0", features = ["full"] }

[lints]
workspace = true
