[package]
name = "frep"
version = "0.1.4"
edition = "2024"
authors = ["thomasschafer97@gmail.com"]
description = "Command line find and replace tool"
readme = "../README.md"
license = "MIT"
homepage = "https://github.com/thomasschafer/frep"
repository = "https://github.com/thomasschafer/frep"
keywords = ["cli", "find", "search", "replace"]
categories = ["command-line-utilities"]

[dependencies]
frep-core = { version = "0.1.5", path = "../frep-core" }
anyhow = "1.0.99"
clap = { version = "4.5.46", features = ["derive"] }
etcetera = "0.10.0"
simple-log = "2.3.0"

[dev-dependencies]
tempfile = "3.21.0"

[lints]
workspace = true
